--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Email Configuration</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
@@ -100,6 +100,12 @@
             </div>
             <div class="img-des">
               <img src="./img/shortcut3.png" alt="" />
+            </div>
+          </div>
+          <div class="right">
+            <div class="des" data-translate="shortcut4"></div>
+            <div class="img-des">
+              <img src="./img/shortcut4.png" alt="" />
             </div>
           </div>
         </div>
